--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -5,18 +5,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
 }
 .headerLogo, .headerMenu {
     margin-left: 25px;
 }
 .headerLogo {
     font-size: 36px;
+    color: darkred;
 }
 .headerMenu {
     height: 100%;
-    width: auto;
+    width: 50px;
     display: flex;
     align-items: center;
+    fill: darkred;
 }
 .headerBlock {
     width: 1000px;
@@ -26,7 +29,7 @@
 .headerMenuImage {
     width: 50px;
     height: 50px;
-    background-color: brown;
+    background-color: hsl(0, 59%, 41%);
 }
 @media (max-width: 1000px) {
 
