--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
+    z-index: 999;
 }
 .headerLogo, .headerMenu {
     margin-left: 25px;
@@ -30,6 +31,25 @@
     width: 50px;
     height: 50px;
     background-color: hsl(0, 59%, 41%);
+}
+.headerSlide {
+    position:absolute;
+    background-color: darkorange;
+    width: 345px;
+    margin-left: 25px;
+    height: 345px;
+    border-radius: 0 0 25px 25px;
+    border: 3px solid brown;
+    z-index: 888;
+    transition: 0.5s;
+}
+.headerSlideButton {
+    height: 75px;
+    text-align: center;
+    font-size: 28px;
+    line-height: 75px;
+    border-bottom: 3px solid brown;
+    color: brown;
 }
 @media (max-width: 1000px) {
 
